--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pandas==1.5.2
-pytorch-lightning==1.9.4
+pytorch-lightning==1.8.0
 lightning-bolts==0.6.0.post1
 tensorboard==2.11.0
+lightning-utilities==0.3.0
