--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==1.5.2
-pytorch-lightning==1.8.0
-lightning-bolts==0.6.0.post1
-tensorboard==2.11.0
-lightning-utilities==0.3.0
+pandas>=2.0.3
+pytorch-lightning==1.9.5
+lightning-bolts==0.7.0
+tensorboard>=2.13.0
+timm>=0.9.2
